--- a/src/assets/scss/components/panels/_panel--poi.scss
+++ b/src/assets/scss/components/panels/_panel--poi.scss
@@ -62,7 +62,7 @@ $a-long-trans: 5000ms;
   &-list {
     list-style-type: none;
     margin-bottom: 0;
-    padding-left: .75rem;
+    padding-left: .5rem;
     @include mq($from: tablet){
       margin-bottom: .5rem;
     }
@@ -81,19 +81,27 @@ $a-long-trans: 5000ms;
     text-decoration: none;
     transition: $a-all-hover-transition;
 
-    .poi-subgroup__preview {
-      text-decoration: none;
+    &--access {
+      cursor: default;
+      .poi-subgroup__preview {
+        white-space: normal;
+        width: auto;
+      }
     }
 
     &--feat {
-      &:hover {
-        color: $c-feat-pin-bg;
+      @include mq($from: desktop){
+        &:hover {
+          color: $c-feat-pin-bg;
+        }
       }
     }
 
     &--comm {
-      &:hover {
-        color: $c-comm-pin-bg;
+      @include mq($from: desktop){
+        &:hover {
+          color: $c-comm-pin-bg;
+        }
       }
     }
   }
@@ -114,10 +122,10 @@ $a-long-trans: 5000ms;
     font-size: .8rem;
     line-height: 1.5;
     text-decoration: none;
-    // width: 50%;
-    // white-space: nowrap;
+    width: calc(100% - 2.4rem - .75rem);
+    white-space: nowrap;
     overflow: hidden;
-    // text-overflow: ellipsis;
+    text-overflow: ellipsis;
   }
 }
 
@@ -166,6 +174,10 @@ $a-long-trans: 5000ms;
     @include mq($from: tablet){
       height: $size*1.2;
       width: $size*1.2;
+    }
+    &--access {
+      background-color: $c-access-pin-bg;
+      border-color: $c-access-pin-stroke;
     }
     &--feat {
       background-color: $c-feat-pin-bg;
